--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Kas</title>
-		
+		<link rel="stylesheet" type="text/css" href="styeles.css">
 	</head>
 	<body>
 	</body>
