--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Kas</title>
 		<link rel="stylesheet" type="text/css" href="styeles.css">
+		<link rel="stylesheet" type="text/css" href="normalize.css">
 	</head>
 	<body>
 	</body>
