--- a/index.html
+++ b/index.html
@@ -2,10 +2,51 @@
 <html lange="sv">
 	<head>
 		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
 		<title>Kas</title>
-		<link rel="stylesheet" type="text/css" href="styeles.css">
 		<link rel="stylesheet" type="text/css" href="normalize.css">
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
 	<body>
+		<div class="center-div page-margin">
+			<div>
+				<img src="images/karolinawesterlund.jpg" alt="karolina Westerlund" class="portrait image-circle">  
+			</div>
+			<h1 class="main-heading">Karolina Westerlund</h1>
+			<p class="intro-text">vad är det nu jag gör??</p>
+			<div class="paragraph">
+				<p>här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. </p>
+ 			</div>
+  			<div class="links">
+  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Linkedin </a>
+  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Twitter</a>
+  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
+			</div>
+			<div class="container">
+				<div class="work float">
+					<img class="images image-circle portrait"src="images/bild6-square.jpg">
+					<h3 class="work-header">Jobb1</h3>
+					<p>Beskrivning av jobb nr 1. Jättemånga ord efter varandra...</p>
+				</div>
+				<div class="work float">
+					<img class="images image-circle portrait" src="images/bild9-square.jpg">
+					<h3 class="work-header">Jobb2</h3>
+					<p>Beskrivning av jobb nr 2. Andra ord efter varandra i meningar...</p>
+				</div>
+				<div class="work float">
+					<img class="images image-circle	portrait" src="images/bild3-square.jpg">
+					<h3 class="work-header">Jobb3</h3>
+					<p>Beskrivning av jobb nr 3. Andra ord efter varandra i meningar...</p>
+				</div>
+			</div>
+			<div class="bottom-container">
+				<h2>Kontakt</h2>
+			<div>
+  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Linkedin </a>
+  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Twitter</a>
+  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
+			</div>
+			</div>
+		</div>
 	</body>
 </html>
