images as links

--- a/index.html
+++ b/index.html
@@ -13,39 +13,43 @@
 				<img src="images/karolinawesterlund.jpg" alt="karolina Westerlund" class="portrait image-circle">  
 			</div>
 			<h1 class="main-heading">Karolina Westerlund</h1>
-			<p class="intro-text">vad är det nu jag gör??</p>
+			<p class="intro-text">Titel</p>
 			<div class="paragraph">
-				<p>här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. </p>
+				<p> Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan  jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. </p>
  			</div>
   			<div class="links">
   				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Linkedin </a>
-  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Twitter</a>
+  				<a class ="links" href="https://twitter.com/karolinawest">Twitter</a>
   				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
 			</div>
 			<div class="container">
 				<div class="work float">
-					<img class="images image-circle portrait"src="images/bild6-square.jpg">
-					<h3 class="work-header">Jobb1</h3>
+					<img class="portrait image-circle"src="images/bild6-square.jpg">
+					<h3 class="sub-heading">Jobb1</h3>
 					<p>Beskrivning av jobb nr 1. Jättemånga ord efter varandra...</p>
 				</div>
 				<div class="work float">
-					<img class="images image-circle portrait" src="images/bild9-square.jpg">
-					<h3 class="work-header">Jobb2</h3>
+					<img class="portrait image-circle" src="images/bild9-square.jpg">
+					<h3 class="sub-heading">Jobb2</h3>
 					<p>Beskrivning av jobb nr 2. Andra ord efter varandra i meningar...</p>
 				</div>
 				<div class="work float">
-					<img class="images image-circle	portrait" src="images/bild3-square.jpg">
-					<h3 class="work-header">Jobb3</h3>
+					<img class="portrait image-circle" src="images/bild3-square.jpg">
+					<h3 class="sub-heading">Jobb3</h3>
 					<p>Beskrivning av jobb nr 3. Andra ord efter varandra i meningar...</p>
 				</div>
 			</div>
 			<div class="bottom-container">
 				<h2>Kontakt</h2>
-			<div>
-  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Linkedin </a>
-  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Twitter</a>
-  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
-			</div>
+				<div class="paragraph">
+					<p>Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill.
+					</p>
+				</div>
+				<div class="links">
+  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
+  					<a class ="links" href="https://twitter.com/karolinawest"> <img src="images/twitterthumb.png" alt="Linkedin" width="40"></a>
+  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> <img src="images/emailthumb.png" alt="Linkedin" width="40"></a>
+				</div>
 			</div>
 		</div>
 	</body>
