--- a/index.html
+++ b/index.html
@@ -9,47 +9,48 @@
 	</head>
 	<body>
 		<div class="center-div page-margin">
-			<div>
+			<div class="top-container">
 				<img src="images/karolinawesterlund.jpg" alt="karolina Westerlund" class="portrait image-circle">  
-			</div>
-			<h1 class="main-heading">Karolina Westerlund</h1>
-			<p class="intro-text">Titel</p>
-			<div class="paragraph">
-				<p> Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan  jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. </p>
- 			</div>
-  			<div class="links">
-  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Linkedin </a>
-  				<a class ="links" href="https://twitter.com/karolinawest">Twitter</a>
-  				<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
+				<h1 class="main-heading">Karolina Westerlund</h1>
+				<p class="intro-text">KWD Studio</p>
+					<div class="paragraph">
+					<p> Det är dags nu. Att stå på egna ben, utan att luta mig mot något invant, tryggt eller bestämt. Jag har valt att starta min egen verksamhet, på mina villkor och utifrån min övertygelse och erfarenhet. Lockelsen i friheten att göra saker på riktigt med både hjärta och hjärna. Min förhoppning är att det ska ge effekt - inte bara för mig, utan även för kollegor och kunder. 
+					</p>
+ 					</div>
+  				<div class="links">
+  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> linkedin</a>
+  					<a class ="links" href="https://twitter.com/karolinawest">Twitter</a>
+  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
+				</div>
 			</div>
 			<div class="container">
-				<div class="work float">
-					<img class="portrait image-circle"src="images/bild6-square.jpg">
-					<h3 class="sub-heading">Jobb1</h3>
-					<p>Beskrivning av jobb nr 1. Jättemånga ord efter varandra...</p>
+				<div class="float">
+					<img class="portrait image-corners" src="images/bild6-square.jpg">
+					<h3 class="sub-heading">Kommunikation</h3>
+					<p class="work-text">Reklam i egna kanaler, content på köpt utrymme. KWD Studio utgår alltid ifrån målgruppen - dess drivkrafter och kulturella kontext. Därefter skapas innehåll som förhoppningsvis når målgruppen och samtidigt stöttar målet. Vad du väljer att kalla kommunikationen spelar mindre roll. </p>
 				</div>
-				<div class="work float">
-					<img class="portrait image-circle" src="images/bild9-square.jpg">
-					<h3 class="sub-heading">Jobb2</h3>
-					<p>Beskrivning av jobb nr 2. Andra ord efter varandra i meningar...</p>
+				<div class="float">
+					<img class="portrait image-corners" src="images/bild9-square.jpg">
+					<h3 class="sub-heading">Strategi</h3>
+					<p class="work-text">Vem ska du nå? Vad vill du säga? Var ska du synas? Det finns oändligt många frågor när det kommer till kommunikation. En strategi kan vara bra. lösadfjls öajflök sdajflöks jflöasdj asdklfj lkssakldfjlsk jf </p>
 				</div>
-				<div class="work float">
-					<img class="portrait image-circle" src="images/bild3-square.jpg">
-					<h3 class="sub-heading">Jobb3</h3>
-					<p>Beskrivning av jobb nr 3. Andra ord efter varandra i meningar...</p>
+				<div class="float">
+					<img class="portrait image-corners" src="images/bild3-square.jpg">
+					<h3 class="sub-heading">Paris</h3>
+					<p class="work-text">Flera ord efter varandra i meningarFlera ord efter varandra i meningar. Flera ord efter varandra i meningar. Flera ord efter varandra i meningar. Flera ord efter varandra i meningar...</p>
 				</div>
 			</div>
 			<div class="bottom-container">
-				<h2>Kontakt</h2>
-				<div class="paragraph">
-					<p>Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill.
+				<div>
+					<h2 class="main-heading">Kontakt</h2>
+					<p class="paragraph">Ring, kom förbi, skicka röksignaler. Eller maila </p>
+					<a href="mailto:karolinawesterlund@gmail.com" class="links" target="_top">karolinawesterlund@gmail.com</a>
 					</p>
-				</div>
-				<div class="links">
-  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
-  					<a class ="links" href="https://twitter.com/karolinawest"> <img src="images/twitterthumb.png" alt="Linkedin" width="40"></a>
-  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> <img src="images/emailthumb.png" alt="Linkedin" width="40"></a>
-				</div>
+					<div class="links">
+  						<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
+  						<a class ="links" href="https://twitter.com/karolinawest"> <img src="images/twitterthumb.png" alt="Linkedin" width="40"></a>
+  					<a class ="links" href="mailto:karolinawesterlund@gmail.com"> <img src="images/emailthumb.jpg" alt="Linkedin" width="40"></div></a>
+  				</div>
 			</div>
 		</div>
 	</body>
