--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<div class="center-div page-margin">
 			<div class="top-container">
-				<img src="images/karolinawesterlund.jpg" alt="karolina Westerlund" class="portrait image-circle">  
+				<img src="images/Karolinawesterlund.jpg" alt="karolina Westerlund" class="portrait image-circle">  
 				<h1 class="main-heading">Karolina Westerlund</h1>
 				<p class="intro-text">KWD Studio</p>
 					<div class="paragraph">
@@ -41,7 +41,7 @@
 				</div>
 			</div>
 			<div class="bottom-container">
-				<div>
+				<div class="float">
 					<h2 class="main-heading">Kontakt</h2>
 					<p class="paragraph">Ring, kom förbi, skicka röksignaler. Eller maila </p>
 					<a href="mailto:karolinawesterlund@gmail.com" class="links" target="_top">karolinawesterlund@gmail.com</a>
