--- a/index.html
+++ b/index.html
@@ -34,24 +34,35 @@
 					<h3 class="sub-heading">Strategi</h3>
 					<p class="work-text">Vem ska du nå? Vad vill du säga? Var ska du synas? Det finns oändligt många frågor när det kommer till kommunikation. En strategi kan vara bra. lösadfjls öajflök sdajflöks jflöasdj asdklfj lkssakldfjlsk jf </p>
 				</div>
-				<div class="float">
+				<div class="float-larger">
 					<img class="portrait image-corners" src="images/bild3-square.jpg">
 					<h3 class="sub-heading">Paris</h3>
 					<p class="work-text">Flera ord efter varandra i meningarFlera ord efter varandra i meningar. Flera ord efter varandra i meningar. Flera ord efter varandra i meningar. Flera ord efter varandra i meningar...</p>
 				</div>
-			</div>
-			<div class="bottom-container">
-				<div class="float">
+				<div class="contact">
 					<h2 class="main-heading">Kontakt</h2>
-					<p class="paragraph">Ring, kom förbi, skicka röksignaler. Eller maila </p>
+					<p class="work-text">Ring, kom förbi, skicka röksignaler. Eller maila </p>
 					<a href="mailto:karolinawesterlund@gmail.com" class="links" target="_top">karolinawesterlund@gmail.com</a>
-					</p>
-					<div class="links">
+						<div class="links">
   						<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
   						<a class ="links" href="https://twitter.com/karolinawest"> <img src="images/twitterthumb.png" alt="Linkedin" width="40"></a>
-  					<a class ="links" href="mailto:karolinawesterlund@gmail.com"> <img src="images/emailthumb.jpg" alt="Linkedin" width="40"></div></a>
-  				</div>
+  						<a class ="links" href="mailto:karolinawesterlund@gmail.com"> <img src="images/emailthumb.jpg" alt="Linkedin" width="40"></a>
+  						</div>
+				</div>
 			</div>
+			
+					<!--<div class="contact">
+					<h2 class="main-heading">Kontakt</h2>
+					<p class="work-text">Ring, kom förbi, skicka röksignaler. Eller maila </p>
+					<a href="mailto:karolinawesterlund@gmail.com" class="links" target="_top">karolinawesterlund@gmail.com</a>
+					
+					<div class="links">
+  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
+  					<a class ="links" href="https://twitter.com/karolinawest"> <img src="images/twitterthumb.png" alt="Linkedin" width="40"></a>
+  					<a class ="links" href="mailto:karolinawesterlund@gmail.com"> <img src="images/emailthumb.jpg" alt="Linkedin" width="40"></a>
+  					</div> -->
+  					
+			
 		</div>
 	</body>
 </html>
