--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 				<h1 class="main-heading">Karolina Westerlund</h1>
 				<p class="intro-text">KWD Studio</p>
 					<div class="paragraph">
-					<p> Det är dags nu. Att stå på egna ben, utan att luta mig mot något invant, tryggt eller bestämt. Jag har valt att starta min egen verksamhet, på mina villkor och utifrån min övertygelse och erfarenhet. Lockelsen i friheten att göra saker på riktigt med både hjärta och hjärna. Min förhoppning är att det ska ge effekt - inte bara för mig, utan även för kollegor och kunder. 
+					<p> Ledare och strateg med fokus på digitala förändringsprocesser. Jag har de senaste åren arbetat med digital
+kommunikation och transformation i syfte att stärka organisationers affärer och varumärken.
 					</p>
  					</div>
   				<div class="links">
@@ -26,18 +27,18 @@
 			<div class="container">
 				<div class="float">
 					<img class="portrait image-corners" src="images/bild6-square.jpg">
-					<h3 class="sub-heading">Kommunikation</h3>
-					<p class="work-text">Reklam i egna kanaler, content på köpt utrymme. KWD Studio utgår alltid ifrån målgruppen - dess drivkrafter och kulturella kontext. Därefter skapas innehåll som förhoppningsvis når målgruppen och samtidigt stöttar målet. Vad du väljer att kalla kommunikationen spelar mindre roll. </p>
+					<h3 class="sub-heading">Rubrik</h3>
+					<p class="work-text">Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. </p>
 				</div>
 				<div class="float">
 					<img class="portrait image-corners" src="images/bild9-square.jpg">
-					<h3 class="sub-heading">Strategi</h3>
-					<p class="work-text">Vem ska du nå? Vad vill du säga? Var ska du synas? Det finns oändligt många frågor när det kommer till kommunikation. En strategi kan vara bra. lösadfjls öajflök sdajflöks jflöasdj asdklfj lkssakldfjlsk jf </p>
+					<h3 class="sub-heading"> Rubrik</h3>
+					<p class="work-text">Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill.</p>
 				</div>
 				<div class="float-larger">
-					<img class="portrait image-corners" src="images/bild3-square.jpg">
-					<h3 class="sub-heading">Paris</h3>
-					<p class="work-text">Flera ord efter varandra i meningarFlera ord efter varandra i meningar. Flera ord efter varandra i meningar. Flera ord efter varandra i meningar. Flera ord efter varandra i meningar...</p>
+					<img class="portrait image-corners" src="images/kwd_2.gif">
+					<h3 class="sub-heading">KWD Studio</h3>
+					<p class="work-text">En digital marknadsbyrå som på riktigt och på djupet utgår från målgruppens kulturella kontext för att skapa kommunikation. Vill du jobba tillsammans - antingen som kund, samarbetspartner eller medarbetare, hör av dig!  </p>
 				</div>
 				<div class="contact">
 					<h2 class="main-heading">Kontakt</h2>
@@ -50,19 +51,6 @@
   						</div>
 				</div>
 			</div>
-			
-					<!--<div class="contact">
-					<h2 class="main-heading">Kontakt</h2>
-					<p class="work-text">Ring, kom förbi, skicka röksignaler. Eller maila </p>
-					<a href="mailto:karolinawesterlund@gmail.com" class="links" target="_top">karolinawesterlund@gmail.com</a>
-					
-					<div class="links">
-  					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
-  					<a class ="links" href="https://twitter.com/karolinawest"> <img src="images/twitterthumb.png" alt="Linkedin" width="40"></a>
-  					<a class ="links" href="mailto:karolinawesterlund@gmail.com"> <img src="images/emailthumb.jpg" alt="Linkedin" width="40"></a>
-  					</div> -->
-  					
-			
 		</div>
 	</body>
 </html>
