--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-		<title>Kas</title>
+		<title>Karolina Westerlund</title>
 		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
@@ -14,8 +14,8 @@
 				<h1 class="main-heading">Karolina Westerlund</h1>
 				<p class="intro-text">KWD Studio</p>
 					<div class="paragraph">
-					<p> Det är dags nu. Att stå på egna ben, utan att luta mig mot något invant, tryggt eller bestämt. Jag har valt att starta min egen verksamhet, på mina villkor och utifrån min övertygelse och erfarenhet. Lockelsen i friheten att göra saker på riktigt med både hjärta och hjärna. Min förhoppning är att det ska ge effekt - inte bara för mig, utan även för kollegor och kunder. 
-					</p>
+						<p> Vd och grundare</p>
+					<p>Ledare och strateg med fokus på digital kommunikation och marknadsföring. Jag har de senaste åren arbetat med digitala förändringsprocesser i syfte att stärka både organisationer och varumärken.</p>
  					</div>
   				<div class="links">
   					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> linkedin</a>
