image and copy update

--- a/index.html
+++ b/index.html
@@ -3,46 +3,48 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-		<title>Kas</title>
+		<title>Karolina Westerlund</title>
 		<link rel="stylesheet" type="text/css" href="normalize.css">
 		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
+	
 	<body>
 		<div class="center-div page-margin">
 			<div class="top-container">
 				<img src="images/Karolinawesterlund.jpg" alt="karolina Westerlund" class="portrait image-circle">  
 				<h1 class="main-heading">Karolina Westerlund</h1>
-				<p class="intro-text">KWD Studio</p>
+				<p class="intro-text">vd och grundare KWD Studio</p>
 					<div class="paragraph">
-					<p> Ledare och strateg med fokus på digitala förändringsprocesser. Jag har de senaste åren arbetat med digital
-kommunikation och transformation i syfte att stärka organisationers affärer och varumärken.
-					</p>
+						<p> Ledare och strateg med fokus på digital kommunikation och marknadsföring. Jag har de senaste åren arbetat med digitala förändringsprocesser i syfte att stärka både organisationer och varumärken. 
+						</p>
  					</div>
+  				
   				<div class="links">
   					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> linkedin</a>
   					<a class ="links" href="https://twitter.com/karolinawest">Twitter</a>
   					<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"> Kwdstudio.se</a>
 				</div>
 			</div>
+			
 			<div class="container">
+				<div class="float-larger">
+					<img class="portrait image-corners" src="images/bildKWD.png">
+					<h3 class="sub-heading">KWD Studio</h3>
+					<p class="work-text">En digital marknadsbyrå som på riktigt och på djupet utgår från målgruppens kulturella kontext för att skapa kommunikation. Vill du jobba tillsammans - antingen som kund, samarbetspartner eller medarbetare, hör av dig!  </p>
+				</div>
 				<div class="float">
 					<img class="portrait image-corners" src="images/bild6-square.jpg">
-					<h3 class="sub-heading">Rubrik</h3>
+					<h3 class="sub-heading">Strategi</h3>
 					<p class="work-text">Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. </p>
 				</div>
 				<div class="float">
 					<img class="portrait image-corners" src="images/bild9-square.jpg">
-					<h3 class="sub-heading"> Rubrik</h3>
+					<h3 class="sub-heading"> Ledarskap</h3>
 					<p class="work-text">Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill. Här kan jag skriva om allt jag vill.</p>
-				</div>
-				<div class="float-larger">
-					<img class="portrait image-corners" src="images/kwd_2.gif">
-					<h3 class="sub-heading">KWD Studio</h3>
-					<p class="work-text">En digital marknadsbyrå som på riktigt och på djupet utgår från målgruppens kulturella kontext för att skapa kommunikation. Vill du jobba tillsammans - antingen som kund, samarbetspartner eller medarbetare, hör av dig!  </p>
 				</div>
 				<div class="contact">
 					<h2 class="main-heading">Kontakt</h2>
-					<p class="work-text">Ring, kom förbi, skicka röksignaler. Eller maila </p>
+					<p class="work-text">Hör av dig! Du når mig på: </p>
 					<a href="mailto:karolinawesterlund@gmail.com" class="links" target="_top">karolinawesterlund@gmail.com</a>
 						<div class="links">
   						<a class ="links" href="https://www.linkedin.com/in/karolina-westerlund-5930215/"><img src="images/linkedinthumb.png" alt="Linkedin" width="40"></a>
